# wahlumfragen-datenbank-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  wahlumfragen-datenbank.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  wahlumfragen-datenbank.rockspec  wahlumfragen-datenbank_sdk.lua  (+1 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  wahlumfragendatenbank_sdk.py  wahlumfragendatenbank_types.py
py/core/: context.py  response.py  result.py  utility_type.py
py/entity/: get_polling_database_entity.py  metadata_entity.py
py/feature/: audit_feature.py  debug_feature.py  netsim_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_get_polling_database_direct.py  test_get_polling_database_entity.py  test_metadata_direct.py  test_metadata_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_hook.py  feature_init.py  make_error.py  make_options.py  make_point.py  make_url.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_method.py  prepare_params.py  prepare_path.py  register.py  result_basic.py  transform_request.py  transform_response.py
(+440 files in other folders)
